--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": [
     "@babel/preset-env",
-    ["@babel/preset-react", { "runtime": "automatic" }],
+    ["@babel/preset-react", { "pragma": "_JSX" }],
     "@babel/preset-typescript"
   ]
 }
