--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "discord_commander",
+  "name": "cmdk-discord",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -12,11 +12,9 @@
     "babel-loader": "^9.1.3",
     "cmdk": "^0.2.0",
     "dotenv": "^16.3.1",
-    "postcss-loader": "^7.3.3",
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass.js": "^0.11.1",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "webpack": "^5.88.2"
   },
@@ -24,16 +22,12 @@
     "@types/node": "^20.4.5",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
-    "@types/sass-loader": "^8.0.8",
     "@types/webpack": "^5.28.5",
     "@types/webpack-env": "^1.18.4",
     "autoprefixer": "^10.4.14",
     "css-loader": "^7.1.1",
     "node-sass": "^9.0.0",
-    "postcss": "^8.4.27",
-    "sass-loader": "^14.2.1",
     "style-loader": "^3.3.4",
-    "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
